Made card fixed size and solved text overflow

--- a/public/stylesheets/SidewalkGallery/cards.css
+++ b/public/stylesheets/SidewalkGallery/cards.css
@@ -6,6 +6,13 @@
     padding: 5px;
     border-radius: 5px;
     margin: 5px;
+    width: 360px;
+    height: auto;
+}
+
+.static-gallery-image {
+    width: 100%;
+    height: auto;
 }
 
 #gallery-validation-button-holder {
@@ -23,6 +30,10 @@
 
 p.label-severity, p.label-tags {
     margin: 5px 0;
+    width: 100%;
+    height: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
 }
 
